# team5

lesson1/: README.md  答题卡.md
lesson10/: README.md  lib.rs
lesson10/ecr20/: Cargo.toml  lib.rs
lesson10/ecr20/.ink/abi_gen/: Cargo.toml  main.rs
lesson10/erc20/: lib.rs
lesson11/: README.md  SafeMath.sol  buzz.sol  erc20.sol
lesson12/: README.md  customSpec.json  customSpecRaw.json
lesson12/node/src/: command.rs
lesson12/pallets/template/src/: lib.rs
lesson12/substrate-node-template/: insect_staging.json  insect_staging_raw.json
lesson12/substrate-node-template/node/: Cargo.toml
lesson12/substrate-node-template/node/src/: chain_spec.rs  command.rs  executor.rs
lesson12/substrate-node-template/pallets/template/: Cargo.toml
lesson12/substrate-node-template/runtime/: Cargo.toml
lesson12/substrate-node-template/runtime/src/: lib.rs
lesson2/: README.md  answer.md  答题卡.md  运行流程说明.md
lesson2/homework/: README.md
lesson2/homework/pallets/poe/: Cargo.toml
lesson2/homework/pallets/poe/src/: lib.rs
lesson2/homework/runtime/: Cargo.toml
lesson2/homework/runtime/src/: lib.rs
lesson2/homework/scripts/: homework.json
lesson2/substrate-node-template/pallets/poe/: Cargo.toml
lesson2/substrate-node-template/runtime/: Cargo.toml
lesson2/substrate-node-template/runtime/src/: lib.rs
lesson3/: README.md  answer.md  答题卡.md  运行流程说明.md
lesson3/homework-ui/src/: App.js  Poe.js
lesson3/homework-ui/src/config/: common.json
lesson3/homework/runtime/src/: lib.rs
lesson3/homework/scripts/: homework.json
lesson3/substrate-front-end-template/src/: App.js  PoEModule.js  PoeModule.js  TemplateModule.js
lesson3/substrate-node-template/pallets/poe/: Cargo.toml
lesson3/substrate-node-template/runtime/src/: lib.rs
lesson4/: README.md  答题卡.md  运行流程说明.md
lesson4/homework-ui/src/: App.js  Poe.js  PoeList.js
lesson4/homework-ui/src/config/: common.json
lesson4/homework/node/: Cargo.toml
lesson4/homework/pallets/poe/: Cargo.toml
lesson4/homework/runtime/src/: lib.rs
lesson4/homework/scripts/: homework.json
lesson4/substrate-front-end-template/: .gitignore
lesson4/substrate-front-end-template/src/: AccountSelector.js  App.js  PoeModule.js
lesson4/substrate-node-template/pallets/poe/: Cargo.toml
lesson4/substrate-node-template/runtime/src/: lib.rs
lesson5/: homework.md  lesson5 homework.txt  答题卡.md
lesson5/pallets/kitties/: Cargo.toml
lesson5/pallets/kitties/src/: lib.rs
lesson5/runtime/src/: lib.rs
lesson6/: 答题卡.md
lesson6/pallets/: homework_for_lesson6.txt
lesson6/scripts/: kitties.json
lesson7/: README.md  思考题.txt  答题卡.md
lesson8/: README.md  答题卡.md
lesson9/substrate-node-template/pallets/template/: Cargo.toml
lesson9/substrate-node-template/pallets/template/src/: lib.rs  mock.rs  tests.rs
(+28 files in other folders)
