[package]
authors = ['Richard']
description = 'poe'
edition = '2018'
name = 'poe'
version = '2.0.0-rc2'


[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']


[dependencies]
#substrate
frame-support = { version = '2.0.0-rc2', git = 'https://github.com/paritytech/substrate.git',  tag = 'v2.0.0-rc2', default-features = false }
system = { package = 'frame-system', version = '2.0.0-rc2', git = 'https://github.com/paritytech/substrate.git',  tag = 'v2.0.0-rc2', default-features = false  }
sp-runtime = { version = '2.0.0-rc2', git = 'https://github.com/paritytech/substrate.git',  tag = 'v2.0.0-rc2', default-features = false  }
sp-std = { version = '2.0.0-rc2', git = 'https://github.com/paritytech/substrate.git',  tag = 'v2.0.0-rc2', default-features = false  }
sp-io = { version = '2.0.0-rc2', git = 'https://github.com/paritytech/substrate.git',  tag = 'v2.0.0-rc2', default-features = false  }
sp-core = { version = '2.0.0-rc2', git = 'https://github.com/paritytech/substrate.git',  tag = 'v2.0.0-rc2', default-features = false  }
codec = { package = 'parity-scale-codec', features = ['derive'], version = '1.3.0', default-features = false }



[features]
default = ['std']
std = [
    'frame-support/std',
	'system/std',
	'sp-std/std',
]

