[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'FRAME pallet template'
edition = '2018'
homepage = 'https://substrate.io'
license = 'Unlicense'
name = 'pallet-template'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '2.0.0-rc2'

[dependencies]
# external dependencies
parity-scale-codec = { default-features = false, features = ['derive'], version = '1.3.0' }
parking_lot = "0.10.0"

alt_serde = { version = "1", default-features = false, features = ["derive"] }
# updated to `alt_serde_json` when latest version supporting feature `alloc` is released
serde_json = { version = "1", default-features = false, git = "https://github.com/Xanewok/json", branch = "no-std", features = ["alloc"] }

# Substrate dependencies
frame-support = { version = '2.0.0-rc2', default-features = false }
frame-system = { version = '2.0.0-rc2', default-features = false }
sp-runtime = { version = '2.0.0-rc2', default-features = false }
sp-core = { version = '2.0.0-rc2', default-features = false }
sp-io = { version = '2.0.0-rc2', default-features = false }
sp-std = { version = '2.0.0-rc2', default-features = false }

[features]
default = ['std']
std = [
	'parity-scale-codec/std',
	'frame-support/std',
	'frame-system/std',
	'sp-io/std',
	'sp-runtime/std',
	'sp-std/std',
]
